fix alignment of search and advanced search, start work on nutrition information for create new recipe

--- a/app/assets/stylesheets/application.scss
+++ b/app/assets/stylesheets/application.scss
@@ -215,7 +215,7 @@ nav h1 {
   #adv_search {
     display: inline-block;
     position: absolute;
-    left: 46%;
+    // left: 46%;
     margin-top: 10px;
   }
 
@@ -233,7 +233,7 @@ nav h1 {
     top: 35px;
     display: inline;
     position: relative;
-    left: 31%;
+    // left: 31%;
   }
 
 
